[gd_scene load_steps=6 format=3 uid="uid://dol3chtqdjve8"]

[ext_resource type="Script" uid="uid://bvp6x7ocjvgvp" path="res://script/chest.gd" id="1_bp1or"]
[ext_resource type="Texture2D" uid="uid://sbumj1nklj4j" path="res://newAssets/closedChamb.jpg" id="2_trlyu"]
[ext_resource type="Texture2D" uid="uid://bv5n4nmlall5o" path="res://newAssets/openedChest.png" id="3_x7mpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bv3sb"]
size = Vector2(167, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bp1or"]
size = Vector2(259, 241)

[node name="chest" type="Area2D"]
script = ExtResource("1_bp1or")

[node name="closedChest" type="Sprite2D" parent="."]
position = Vector2(114, 116)
texture = ExtResource("2_trlyu")

[node name="openedChest" type="Sprite2D" parent="."]
visible = false
position = Vector2(117, 112)
scale = Vector2(0.433333, 0.375)
texture = ExtResource("3_x7mpe")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(111.5, 116.5)
shape = SubResource("RectangleShape2D_bv3sb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(115.5, 116.5)
shape = SubResource("RectangleShape2D_bp1or")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(117, 123)
shape = SubResource("RectangleShape2D_bp1or")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
